plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'de.anna.springboot.ikar'
version = '0.0.1'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}


dependencies {

	compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
	compileOnly "org.apache.tomcat.embed:tomcat-embed-jasper"

	testImplementation "org.springframework.boot:spring-boot-starter-test"

	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-starter-web-services"
	//implementation "org.springframework.boot:spring-boot-starter-security"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.postgresql:postgresql"
	implementation "javax.servlet:jstl:1.2"
	implementation "org.apache.tiles:tiles-core:3.0.8"
	implementation "org.apache.tiles:tiles-api:3.0.8"
	implementation "org.apache.tiles:tiles-servlet:3.0.8"
	implementation "org.apache.tiles:tiles-jsp:3.0.8"
	implementation "org.apache.tiles:tiles-request-api:1.0.7"
	implementation "org.apache.commons:commons-lang3:3.12.0"

	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

}
compileJava.dependsOn(processResources)

test {
	useJUnitPlatform()
}
